# integrity-latest

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  FAUCET_INFO.md  Makefile  PRODUCTION_GAPS.md  README.md  docker-compose.yml  patch_attestation.diff  patch_attestation_2.diff  patch_attestation_3.diff  patch_attestation_6.diff  patch_attestation_7.diff  patch_attestation_7.py  patch_attestation_8.py  patch_chain_validation.diff  test_script.py
.agents/: AGENTS.md
.github/workflows/: auto-merge-jules.yml  ci.yml  close-conflicting-jules-prs.yml  sync-wiki.yml
bcc_middleware/: .env.example  CLAUDE.md  Dockerfile  README.md  pyproject.toml
bcc_middleware/app/: anchor.py  audit.py  baa.py  canonical.py  chain.py  circuit_breaker.py  config.py  main.py  merkle.py  nonce_lock.py  nonce_store.py  opa_client.py  reputation.py  schemas.py  scoring_loop.py  verification_token.py
bcc_middleware/policies/: bcc.rego  bcc_test.rego  general.rego  general_test.rego
bcc_middleware/tests/: conftest.py  helpers.py  test_anchor_per_agent.py  test_baa_shield_integration.py  test_chain.py  test_chain_baa_anchor.py  test_circuit_breaker.py  test_intercept.py  test_merkle.py  test_nonce_lock.py  test_opa_fail_closed.py  test_reputation.py  test_scoring_loop.py  test_signature.py  test_verification_token.py
bcc_middleware/tests/fixtures/foundry/: foundry.toml
bcc_middleware/tests/fixtures/foundry/cache/: solidity-files-cache.json
bcc_middleware/tests/fixtures/foundry/src/: MockBAARegistry.sol  MockReputationRegistry.sol  MockSlasher.sol  MockStateAnchor.sol
contracts/: .env.example  README.md  foundry.toml  package-lock.json  package.json  remappings.txt
contracts/script/: Deploy.s.sol  DeployEHRGate.s.sol  DeployMarkets.s.sol  FixComplianceGateFactory.s.sol
contracts/test/: AgentPrimitivesFactory.t.sol  AgentProfile.t.sol  CCIPReputationBridge.t.sol  DomainRegistry.t.sol  IntegrityToken.t.sol  ReputationRegistry.t.sol  Slasher.t.sol  SovereignAgent.t.sol  StateAnchor.t.sol  UltraPlonkVerifier.t.sol  VerifierRegistry.t.sol  XibalbaAgentRegistry.t.sol  XibalbaNameService.t.sol
docs/: INTERFACE_CONTRACT.md  TESTING.md
docs/wiki/: WIKI_INDEX.md  index.md  (+3 more)
integrity-cli/: .env.example  .gitignore  README.md  pyproject.toml
integrity-cli/integrity_cli/: __init__.py  bcc.py  chain.py  client.py  config.py  identity.py  main.py  wallet.py
integrity-cli/integrity_cli/abis/: A2ACapitalPool.json  ComplianceGate.json  IntegrityMarket.json  IntegrityToken.json  SmartBAA.json  SmartBAAFactory.json  StateAnchor.json  __init__.py
integrity-cli/tests/: conftest.py  test_bcc.py  test_chain.py  test_client.py  test_config.py  test_identity.py  test_main.py  test_register_oracle_e2e.py  test_wallet.py
integrity-mvp/: .env.example  .gitignore  CLAUDE.md  README.md  audit.cjs  audit.js  audit_script.cjs  index.html  package-lock.json  package.json  playwright.config.ts  screenshot.js  test-katex.js  test-screenshot.js  test_puppeteer.cjs  vite.config.ts
integrity-mvp/demo/: pyproject.toml
integrity-mvp/demo/src/integrity_demo/: agent_loop.py  heartbeat.py  main.py  userapi_bridge.py
integrity-mvp/demo/tests/: test_userapi_bridge.py
integrity-oracle/: Cargo.toml  Dockerfile  README.md
integrity-oracle/backend/: Cargo.toml
integrity-oracle/backend/migrations/: 0001_init.sql  0002_markets_and_judge.sql  0003_agent_did_document.sql  0004_timescale_and_otel_spans.sql  0005_leaderboard_cache.sql  0006_audit_log.sql
integrity-oracle/backend/src/: chain.rs  config.rs  db.rs  derive.rs  error.rs  handlers.rs  lib.rs  main.rs  merkle.rs  openapi.rs  otlp.rs  phi.rs  routes.rs  stream.rs  trace_tree.rs  zk.rs
integrity-oracle/backend/src/crypto/: ed25519.rs  eip191.rs  mod.rs
integrity-oracle/backend/tests/: e2e.rs
integrity-oracle/backend/tests/fixtures/zk_smoke/: proof  public_inputs  tampered_public_inputs  vk
integrity-oracle/backend/tests/fixtures/zk_smoke/circuit/src/: main.nr
integrity-oracle/backend/tests/support/: otlp_send_span.py  register_agent.py  sign_telemetry.py
integrity-oracle/scoring-core/: Cargo.toml
integrity-oracle/scoring-core/src/: lib.rs
integrity-sdk/: .env.example  .gitignore  README.md  pyproject.toml
integrity-sdk/circuits/poc_commitment/: Nargo.toml
integrity-sdk/circuits/poc_commitment/src/: main.nr
integrity-sdk/integrity_sdk/: batcher.py  bcc.py  chain.py  client.py  did.py  hardware.py  markets.py  opa_client.py  prover.py  registration.py  shield.py  wallet.py
integrity-sdk/integrity_sdk/abis/: A2ACapitalPool.json  AgentPrimitivesFactory.json  ComplianceGate.json  CoveredEntityRegistry.json  EHRGate.json  IntegrityMarket.json  MarketFactory.json  SmartBAAFactory.json  SovereignAgent.json  XibalbaAgentRegistry.json  XibalbaNameService.json  __init__.py
integrity-sdk/integrity_sdk/integrations/: langchain_callback.py  openai_integrity.py
integrity-sdk/integrity_sdk/security/: attestation.py  attestation.py.orig  redactor.py  vault.py
integrity-sdk/integrity_sdk/telemetry/: conventions.py  core.py  derive.py  host.py  intent.py  metrics.py  mlflow_tracing.py  tracing.py
integrity-sdk/tests/: conftest.py  test_attestation.py  test_chain.py  test_markets.py  test_registration.py  test_registration_oracle_e2e.py  test_shield.py  test_tracing_oracle_e2e.py
integrity-sdk/tests/unit/: test_chain_deployments.py  test_client.py  test_derive.py  test_did.py  test_hardware.py  test_intent.py  test_langchain_callback.py  test_mlflow_tracing.py  test_openai_integrity.py  test_prover.py  test_redactor.py  test_tracing.py  test_wallet.py
integrity-userapi/: Dockerfile  pyproject.toml
integrity-userapi/app/: config.py  db.py  deps.py  login_limiter.py  main.py  oracle_client.py  schemas.py  security.py
integrity-userapi/migrations/: 0001_init.sql  0002_jwt_revocation.sql
integrity-userapi/tests/: conftest.py  test_agents.py  test_api_keys.py  test_auth.py  test_db_migrations.py  test_demo_runs.py  test_health.py
integrity-zkp/: .gitignore  Makefile  Nargo.toml  README.md
scripts/: sync_abis.py  sync_wiki.py
spec/: README.md
(+184 files in other folders)
