[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bcc-middleware"
version = "3.0.0"
description = "Behavioral Commitment Chain (BCC) pre-execution policy gating middleware"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "cryptography>=43.0.0",
    "web3>=7.4.0",
    "eth-utils>=5.1.0",
    "eth-account>=0.13.0",
    "python-dotenv>=1.0.1",
    # Decoding the agent's carried `agent_public_key` multibase (z-base58btc)
    # back to raw Ed25519 pubkey bytes in canonical.py — same codec integrity-sdk
    # uses to encode `publicKeyMultibase`.
    "base58>=2.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
