[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "integrity-sdk"
version = "0.1.0"
description = "Integrity Protocol SDK: DID identity, BCC intent commitments, ZK proving, OPA-gated execution, and TEE attestation verification for AI agents."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Integrity Protocol" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]

# NOTE on dependency choices (see README for the full rationale):
#  - `cryptography` is the ONLY signing backend: real Ed25519, no HMAC fallback.
#  - `cbor2` parses the COSE_Sign1/CBOR wire format of Nitro attestation docs;
#    COSE signature verification itself is implemented by hand on top of
#    `cryptography`'s ECDSA primitives (see security/attestation.py) rather than
#    pulling in a full COSE framework, so the trust logic is auditable in one place.
#  - `base58` gives us a battle-tested multibase (base58btc) codec for DID
#    `publicKeyMultibase` fields instead of a hand-rolled implementation.
dependencies = [
    "requests>=2.31.0",
    "cryptography>=42.0.0",
    "cbor2>=5.6.0",
    "base58>=2.1.0",
    "psutil>=5.9.0",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.42.1",
    # EVM wallet + on-chain deploy/registration (wallet.py, chain.py,
    # registration.py) — same versions bcc_middleware already depends on and has
    # proven against real contracts, kept in lockstep deliberately.
    "eth-account>=0.13.0",
    "web3>=7.4.0",
    "eth-utils>=5.1.0",
    # MLflow GenAI tracing (telemetry/mlflow_tracing.py). The `-skinny` variant
    # deliberately: it brings MLflow's tracing/autolog layer without the heavy
    # ML-training stack (sklearn, full pandas/numpy pipeline). MLflow exports
    # its spans through the SAME OpenTelemetry pipeline this SDK already uses,
    # so this adds GenAI-shaped auto-instrumentation on top of OTel, not a
    # competing observability system.
    "mlflow-skinny>=3.0.0",
]

[project.optional-dependencies]
# Framework-specific MLflow autolog needs the framework itself plus pandas
# (which mlflow-skinny omits). Kept optional so the base SDK stays light — an
# agent installs the extra matching whatever LLM stack it actually uses.
# telemetry/mlflow_tracing.configure_tracing enables whichever of these is
# present and honestly reports the rest as skipped.
autolog = ["pandas>=2.0.0"]
openai = ["openai>=1.0.0", "pandas>=2.0.0"]
langchain = ["langchain-core>=0.3.0", "pandas>=2.0.0"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
include = ["integrity_sdk*"]

[tool.setuptools.package-data]
# Trimmed contract {abi, bytecode} JSON (see abis/__init__.py) — must ship in
# the built wheel, not just be readable from an editable-install source tree.
integrity_sdk = ["abis/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
