[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "integrity-userapi"
version = "0.1.0"
description = "User accounts, developer API keys, and per-user app state for the Integrity Protocol. Never touches a smart contract or chain RPC directly -- see integrity-oracle for that."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    "asyncpg>=0.29.0",
    "passlib[argon2]>=1.7.4",
    "pyjwt>=2.9.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "asgi-lifespan>=2.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
