[project]
name = "integrity-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.116.0",
    "fire>=0.7.1",
    "integrity-sdk",
    "openai>=1.45.0",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
]

[project.scripts]
integrity-demo = "integrity_demo.main:main"
integrity-heartbeat = "integrity_demo.heartbeat:main"

[tool.hatch.build.targets.wheel]
packages = ["src/integrity_demo"]

[tool.uv.sources]
integrity-sdk = { path = "../../integrity-sdk" }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

